sources = files(
  'ccfd.c',
  'de47.f',
  'gmg7.f',
  'gwf2bas7.f',
  'gwf2bcf7.f',
  'gwf2bfh2.f',
  'gwf2chd7.f',
  'gwf2drn7.f',
  'gwf2drt7.f',
  'gwf2ets7.f',
  'gwf2evt7.f',
  'gwf2fhb7.f',
  'gwf2gag7.f',
  'gwf2ghb7.f',
  'gwf2hfb7.f',
  'gwf2huf7.f',
  'gwf2hydmod7.f',
  'gwf2ibs7.f',
  'gwf2lak7.f',
  'gwf2lgr2.f',
  'gwf2lpf7.f',
  'gwf2mnw17.f',
  'gwf2mnw27.f',
  'gwf2mnw2i7.f',
  'gwf2rch7.f',
  'gwf2res7.f',
  'gwf2riv7.f',
  'gwf2sfr7.f',
  'gwf2str7.f',
  'gwf2sub7.f',
  'gwf2swt7.f',
  'gwf2uzf1.f',
  'gwf2wel7.f',
  'gwflgrmodule.f',
  'gwfsfrmodule.f',
  'gwfuzfmodule.f',
  'hufutl7.f',
  'lmt7.f',
  'mf2kgmg.c',
  'mflgr.f',
  'mhc7.f',
  'obs2bas7.f',
  'obs2chd7.f',
  'obs2drn7.f',
  'obs2ghb7.f',
  'obs2riv7.f',
  'obs2str7.f',
  'parutl7.f',
  'pcg7.f',
  'pcgn2.f90',
  'pcgn_solve2.f90',
  'r_vector.c',
  'sip7.f',
  'solvers.c',
  'utl7.f',
)

exe = executable(
                 'mflgr',
                 sources,
                 dependencies: extra_deps,
                 install: true
                )
